--- a/task2/src/index.css
+++ b/task2/src/index.css
@@ -19,4 +19,22 @@ code {
   display: inline;
   margin-top: 10px;
   margin-left: 20px;
+  background-color: #f2d2bd;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 20%;
+  display: inline-block;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+.big {
+  margin-top: 100px;
 }
