--- a/task4/src/App.css
+++ b/task4/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  margin: 40px auto;
+  width: 320px;
+  height: 520px;
+  background-color: #3a3b3c;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .App-logo {
