--- a/task4/src/index.css
+++ b/task4/src/index.css
@@ -1,13 +1,81 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.btns {
+  width: 50px;
+  height: 50px;
+  margin: 15px;
+  border-radius: 50%;
+  border-width: 0;
+  font-weight: bold;
+  font-size: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: #0096ff;
+  font-weight: bolder;
+  background-color: #797979;
+}
+.display {
+  display: inline-table;
+  width: 80%;
+  margin-left: -18px;
+}
+
+.display2 {
+  display: ruby-base-container;
+  width: 20%;
+  float: right;
+  margin-right: 16px;
+}
+.input {
+  border: none;
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 20px;
+  float: left;
+  margin-left: 20px;
+}
+.AC {
+  border: none;
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 20px;
+  float: right;
+  margin-right: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: #0096ff;
+  font-weight: bolder;
+}
+.DEC {
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  margin-top: 20px;
+  float: right;
+  margin-right: 20px;
+  width: 137px;
+  font-weight: bolder;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: #0096ff;
+  font-weight: bolder;
+}
+.EQ {
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  margin-top: 20px;
+  width: 90%;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: #0096ff;
+  font-weight: bolder;
 }
