--- a/task4/src/index.css
+++ b/task4/src/index.css
@@ -24,51 +24,7 @@ code {
   font-weight: bolder;
   background-color: #797979;
 }
-.display {
-  display: inline-table;
-  width: 80%;
-  margin-left: -18px;
-}
-
-.display2 {
-  display: ruby-base-container;
-  width: 20%;
-  float: right;
-  margin-right: 16px;
-}
-.input {
-  border: none;
-  border-radius: 10px;
-  padding: 20px;
-  margin-top: 20px;
-  float: left;
-  margin-left: 20px;
-}
-.AC {
-  border: none;
-  border-radius: 10px;
-  padding: 20px;
-  margin-top: 20px;
-  float: right;
-  margin-right: 20px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  color: #0096ff;
-  font-weight: bolder;
-}
-.DEC {
-  border: none;
-  border-radius: 10px;
-  padding: 15px;
-  margin-top: 20px;
-  float: right;
-  margin-right: 20px;
-  width: 137px;
-  font-weight: bolder;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  color: #0096ff;
-  font-weight: bolder;
-}
-.EQ {
+.clear {
   border: none;
   border-radius: 10px;
   padding: 15px;
@@ -78,4 +34,12 @@ code {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   color: #0096ff;
   font-weight: bolder;
+}
+.row {
+  display: flex;
+}
+.container {
+  background-color: white;
+  height: 20%;
+  width: 100%;
 }
