--- a/task4/src/index.css
+++ b/task4/src/index.css
@@ -23,6 +23,8 @@ code {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   color: #0096ff;
   font-weight: bolder;
+  text-align: center;
+  align-items: initial;
   background-color: #797979;
 }
 .clear {
@@ -38,6 +40,8 @@ code {
 }
 .row {
   display: flex;
+  text-align: center;
+  justify-content: center;
 }
 .container {
   background-color: white;
