--- a/task3/src/App.css
+++ b/task3/src/App.css
@@ -42,9 +42,5 @@ h2 {
 }
 ul {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-}
-label {
-  clear: both;
+  columns: 1;
 }
